0.6.10/_sources/gettingstarted/examples/gallery/auto_examples_core/c_importer/plot_read_renishaw.rst

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gettingstarted/examples/gallery/auto_examples_core/c_importer/plot_read_renishaw.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gettingstarted_examples_gallery_auto_examples_core_c_importer_plot_read_renishaw.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gettingstarted_examples_gallery_auto_examples_core_c_importer_plot_read_renishaw.py:


Reading Renishaw WiRE files
===========================
This example shows how to read a Renishaw WiRE files (*.wdf format).

The spectral data used has been downloaded from
https://github.com/alchem0x2A/py-wdf-reader (MIT License) and stored in the
local directory ``ramandata/wire``.

The examples given here is a modified version of the original examples:
See https://github.com/alchem0x2A/py-wdf-reader/blob/master/examples

.. GENERATED FROM PYTHON SOURCE LINES 21-24

.. code-block:: default


    import numpy as np








.. GENERATED FROM PYTHON SOURCE LINES 25-26

First we need to import the spectrochempy API package

.. GENERATED FROM PYTHON SOURCE LINES 26-28

.. code-block:: default

    import spectrochempy as scp








.. GENERATED FROM PYTHON SOURCE LINES 29-32

**Import dataset from local files**
Read Raman data recorded in WiRe format (``.wdf`` extension).
We just pass the file name as parameter.

.. GENERATED FROM PYTHON SOURCE LINES 34-35

First read a single spectrum (measurement type : single)

.. GENERATED FROM PYTHON SOURCE LINES 35-38

.. code-block:: default

    dataset = scp.read_wire("ramandata/wire/sp.wdf")  # or read_wdf (or read)
    _ = dataset.plot()




.. image-sg:: /gettingstarted/examples/gallery/auto_examples_core/c_importer/images/sphx_glr_plot_read_renishaw_001.png
   :alt: plot read renishaw
   :srcset: /gettingstarted/examples/gallery/auto_examples_core/c_importer/images/sphx_glr_plot_read_renishaw_001.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 39-40

Now read a series of spectra (measurement type : series) from a Z-depth scan.

.. GENERATED FROM PYTHON SOURCE LINES 40-43

.. code-block:: default

    dataset = scp.read_wdf("ramandata/wire/depth.wdf")
    _ = dataset.plot_image()




.. image-sg:: /gettingstarted/examples/gallery/auto_examples_core/c_importer/images/sphx_glr_plot_read_renishaw_002.png
   :alt: plot read renishaw
   :srcset: /gettingstarted/examples/gallery/auto_examples_core/c_importer/images/sphx_glr_plot_read_renishaw_002.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 44-45

filter blank spectra

.. GENERATED FROM PYTHON SOURCE LINES 45-49

.. code-block:: default

    keep_rows = np.where(dataset.data.mean(axis=1) > 0)[0]
    dataset = dataset[keep_rows]
    _ = dataset.plot_image()




.. image-sg:: /gettingstarted/examples/gallery/auto_examples_core/c_importer/images/sphx_glr_plot_read_renishaw_003.png
   :alt: plot read renishaw
   :srcset: /gettingstarted/examples/gallery/auto_examples_core/c_importer/images/sphx_glr_plot_read_renishaw_003.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 50-51

extract a line scan data from a StreamLine HR measurement

.. GENERATED FROM PYTHON SOURCE LINES 51-54

.. code-block:: default

    dataset = scp.read("ramandata/wire/line.wdf")
    _ = dataset.plot_image()




.. image-sg:: /gettingstarted/examples/gallery/auto_examples_core/c_importer/images/sphx_glr_plot_read_renishaw_004.png
   :alt: plot read renishaw
   :srcset: /gettingstarted/examples/gallery/auto_examples_core/c_importer/images/sphx_glr_plot_read_renishaw_004.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 55-56

finally extract grid scan data from a StreamLine HR measurement

.. GENERATED FROM PYTHON SOURCE LINES 56-63

.. code-block:: default

    dataset = scp.read_wdf("ramandata/wire/mapping.wdf")
    # plot the dataset as an image (summming all wavenumbers)
    _ = dataset.sum(dim=2).plot_image()
    # plot the image taken at 1529cm-1
    _ = dataset[..., 1529.0].plot_image()





.. rst-class:: sphx-glr-horizontal


    *

      .. image-sg:: /gettingstarted/examples/gallery/auto_examples_core/c_importer/images/sphx_glr_plot_read_renishaw_005.png
         :alt: plot read renishaw
         :srcset: /gettingstarted/examples/gallery/auto_examples_core/c_importer/images/sphx_glr_plot_read_renishaw_005.png
         :class: sphx-glr-multi-img

    *

      .. image-sg:: /gettingstarted/examples/gallery/auto_examples_core/c_importer/images/sphx_glr_plot_read_renishaw_006.png
         :alt: plot read renishaw
         :srcset: /gettingstarted/examples/gallery/auto_examples_core/c_importer/images/sphx_glr_plot_read_renishaw_006.png
         :class: sphx-glr-multi-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    /home/runner/work/spectrochempy/tempdirs/scp_deem6uhy/spectrochempy/application/application.py:782: UserWarning: Map area type is not specified, will assume a xy (column major) scan for the mapping data.
      warnings.warn(msg, *args, **kwargs)




.. GENERATED FROM PYTHON SOURCE LINES 64-66

This ends the example ! The following line can be uncommented if no plot shows when
running the .py script with python

.. GENERATED FROM PYTHON SOURCE LINES 66-68

.. code-block:: default


    # scp.show()








.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  5.914 seconds)


.. _sphx_glr_download_gettingstarted_examples_gallery_auto_examples_core_c_importer_plot_read_renishaw.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example




    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: plot_read_renishaw.py <plot_read_renishaw.py>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: plot_read_renishaw.ipynb <plot_read_renishaw.ipynb>`
