0.9.3/_sources/gettingstarted/examples/gallery/auto_examples_core/c_importer/plot_read_renishaw.rst

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gettingstarted/examples/gallery/auto_examples_core/c_importer/plot_read_renishaw.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gettingstarted_examples_gallery_auto_examples_core_c_importer_plot_read_renishaw.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gettingstarted_examples_gallery_auto_examples_core_c_importer_plot_read_renishaw.py:


Reading Renishaw WiRE files
===========================
This example shows how to read a Renishaw WiRE files (``.wdf`` format).

The spectral data used has been downloaded from
https://github.com/alchem0x2A/py-wdf-reader (MIT License) and stored in the
local directory ``ramandata/wire``.

The examples given here is a modified version of the original examples:
See https://github.com/alchem0x2A/py-wdf-reader/blob/master/examples

.. GENERATED FROM PYTHON SOURCE LINES 16-17

First we need to import the spectrochempy API package

.. GENERATED FROM PYTHON SOURCE LINES 17-19

.. code-block:: default

    import spectrochempy as scp








.. GENERATED FROM PYTHON SOURCE LINES 20-23

**Import dataset from local files**
Read Raman data recorded in WiRe format (``.wdf`` extension).
We just pass the file name as parameter.

.. GENERATED FROM PYTHON SOURCE LINES 25-26

First read a single spectrum (measurement type : single)

.. GENERATED FROM PYTHON SOURCE LINES 26-28

.. code-block:: default

    dataset = scp.read_wire("ramandata/wire/sp.wdf")  # or read_wdf (or read)
    _ = dataset.plot()



.. image-sg:: /gettingstarted/examples/gallery/auto_examples_core/c_importer/images/sphx_glr_plot_read_renishaw_001.png
   :alt: plot read renishaw
   :srcset: /gettingstarted/examples/gallery/auto_examples_core/c_importer/images/sphx_glr_plot_read_renishaw_001.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 29-30

Now read a series of spectra (measurement type : series) from a Z-depth scan.

.. GENERATED FROM PYTHON SOURCE LINES 30-33

.. code-block:: default

    dataset = scp.read_wdf("ramandata/wire/depth.wdf")
    _ = dataset.plot(method="image")




.. image-sg:: /gettingstarted/examples/gallery/auto_examples_core/c_importer/images/sphx_glr_plot_read_renishaw_002.png
   :alt: plot read renishaw
   :srcset: /gettingstarted/examples/gallery/auto_examples_core/c_importer/images/sphx_glr_plot_read_renishaw_002.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 34-42

In this example, the diverging colormap is triggered because the dataset
contains few, but some negative values. If the smaller lobe is at larger than `diverging_margin` (default 5%) of
the total # range, i.e. if the following condition is satisfied:
      min(|vmin|, |vmax|) / (vmax - vmin) > margin
 Then a diverging colormap is used.

To avoid this behavior, you can explicitly enforce a sequential colormap,
for example "viridis":

.. GENERATED FROM PYTHON SOURCE LINES 42-45

.. code-block:: default


    _ = dataset.plot_image(cmap="cividis")




.. image-sg:: /gettingstarted/examples/gallery/auto_examples_core/c_importer/images/sphx_glr_plot_read_renishaw_003.png
   :alt: plot read renishaw
   :srcset: /gettingstarted/examples/gallery/auto_examples_core/c_importer/images/sphx_glr_plot_read_renishaw_003.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 46-48

Alternatively, you can increase the `diverging_margin` that determines when the
diverging colormap is applied. Then the default sequential colormap (`viridis') will be used:

.. GENERATED FROM PYTHON SOURCE LINES 48-51

.. code-block:: default


    _ = dataset.plot(method="image", diverging_margin=0.1)




.. image-sg:: /gettingstarted/examples/gallery/auto_examples_core/c_importer/images/sphx_glr_plot_read_renishaw_004.png
   :alt: plot read renishaw
   :srcset: /gettingstarted/examples/gallery/auto_examples_core/c_importer/images/sphx_glr_plot_read_renishaw_004.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 52-53

filter blank spectra

.. GENERATED FROM PYTHON SOURCE LINES 53-58

.. code-block:: default

    import numpy as np

    keep_rows = np.where(dataset.data.mean(axis=1) > 0)[0]
    dataset = dataset[keep_rows]
    _ = dataset.plot_image()



.. image-sg:: /gettingstarted/examples/gallery/auto_examples_core/c_importer/images/sphx_glr_plot_read_renishaw_005.png
   :alt: plot read renishaw
   :srcset: /gettingstarted/examples/gallery/auto_examples_core/c_importer/images/sphx_glr_plot_read_renishaw_005.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 59-60

extract a line scan data from a StreamLine HR measurement

.. GENERATED FROM PYTHON SOURCE LINES 60-62

.. code-block:: default

    dataset = scp.read("ramandata/wire/line.wdf")
    _ = dataset.plot_image()



.. image-sg:: /gettingstarted/examples/gallery/auto_examples_core/c_importer/images/sphx_glr_plot_read_renishaw_006.png
   :alt: plot read renishaw
   :srcset: /gettingstarted/examples/gallery/auto_examples_core/c_importer/images/sphx_glr_plot_read_renishaw_006.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 63-64

finally extract grid scan data from a StreamLine HR measurement

.. GENERATED FROM PYTHON SOURCE LINES 64-71

.. code-block:: default

    dataset = scp.read_wdf("ramandata/wire/mapping.wdf")
    # plot the dataset as an image (summming all wavenumbers)
    _ = dataset.sum(dim=2).plot_image(equal_aspect=True)
    # plot the image taken at 1529cm-1
    _ = dataset[..., 1529.0].plot_image(equal_aspect=True)





.. rst-class:: sphx-glr-horizontal


    *

      .. image-sg:: /gettingstarted/examples/gallery/auto_examples_core/c_importer/images/sphx_glr_plot_read_renishaw_007.png
         :alt: plot read renishaw
         :srcset: /gettingstarted/examples/gallery/auto_examples_core/c_importer/images/sphx_glr_plot_read_renishaw_007.png
         :class: sphx-glr-multi-img

    *

      .. image-sg:: /gettingstarted/examples/gallery/auto_examples_core/c_importer/images/sphx_glr_plot_read_renishaw_008.png
         :alt: plot read renishaw
         :srcset: /gettingstarted/examples/gallery/auto_examples_core/c_importer/images/sphx_glr_plot_read_renishaw_008.png
         :class: sphx-glr-multi-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    /home/runner/work/spectrochempy/tempdirs/scp_xnzy8k_7/src/spectrochempy/core/readers/read_wire.py:188: UserWarning: Map area type is not specified, will assume a xy (column major) scan for the mapping data.
      warning_(




.. GENERATED FROM PYTHON SOURCE LINES 72-74

This ends the example ! The following line can be uncommented if no plot shows when
running the .py script with python

.. GENERATED FROM PYTHON SOURCE LINES 74-76

.. code-block:: default


    # scp.show()








.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  6.058 seconds)


.. _sphx_glr_download_gettingstarted_examples_gallery_auto_examples_core_c_importer_plot_read_renishaw.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example




    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: plot_read_renishaw.py <plot_read_renishaw.py>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: plot_read_renishaw.ipynb <plot_read_renishaw.ipynb>`
